--- a/bai1.css
+++ b/bai1.css
@@ -1,4 +1,4 @@
-/* bai1.css */
+
 body {
     margin: 0;
     padding: 0;
@@ -118,7 +118,7 @@ body {
     font-weight: 600;
     border: none;
     border-radius: 5px;
-    /* transition: background-color 0.3s ease; */
+  
 }
 
 .header_bar_button button:hover {
@@ -311,7 +311,7 @@ body {
     color: #333;
 }
 .right-details i:hover {
-    color: #ff5733; /* Màu khi hover */
+    color: #ff5733; 
 }
 .right-introduts img{
     justify-content: center;
